<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>
    <groupId>com.yuqiangdede</groupId>
    <artifactId>java-vision-mind</artifactId>
    <version>1.0.0</version>
    <name>vision-mind</name>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <logback.version>1.2.13</logback.version>
        <spring.version>5.3.39</spring.version>
        <lombok.version>1.18.42</lombok.version>
        <lucene.version>9.12.0</lucene.version>
        <tomcat.version>9.0.105</tomcat.version>
        <jts.version>1.19.0</jts.version>
        <jna.version>5.5.0</jna.version>
        <commons-math3.version>3.6.1</commons-math3.version>

        <javacv.version>1.5.10</javacv.version>
        <onnx.version>1.20.0</onnx.version>


    </properties>

    <modules>
        <module>vision-mind-yolo-app</module>
        <module>vision-mind-ffe-app</module>
        <module>vision-mind-tbir-app</module>
        <module>vision-mind-yolo-core</module>
        <module>vision-mind-common</module>
        <module>vision-mind-llm-core</module>
        <module>vision-mind-reid-app</module>
        <module>vision-mind-test-sth</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>5.3.39</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>5.3.39</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
